# src/models/user_role.js
@@ -1,6 +1,6 @@
 const { DataTypes } = require('sequelize');
 
-module.exports = (sequelize) => {
+module.exports = (sequelize, DataTypes) => {
   const UserRole = sequelize.define('UserRole', {
     id: {
       type: DataTypes.INTEGER,
@@ -10,15 +10,29 @@ module.exports = (sequelize) => {
     user_id: {
       type: DataTypes.INTEGER,
       allowNull: false,
+      references: {
+        model: 'Users',
+        key: 'id',
+      },
     },
     role_id: {
       type: DataTypes.INTEGER,
       allowNull: false,
+      references: {
+        model: 'Roles',
+        key: 'id',
+      },
     },
   }, {
     tableName: 'UserRoles',
     timestamps: false,
     underscored: true,
   });
+
+  UserRole.associate = function(models) {
+    UserRole.belongsTo(models.User, { foreignKey: 'user_id', as: 'user' });
+    UserRole.belongsTo(models.Role, { foreignKey: 'role_id', as: 'role' });
+  };
+
   return UserRole;
 };
